# Hierar-Do

./: .gitignore  CLAUDE.md  docker-compose.yml
.github/workflows/: pr_agent.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: decompose.py  parse_goal.py  schedule.py
backend/app/api/v1/: goals.py  reschedule.py  todos.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  goal.py  milestone.py  todo.py  user.py
backend/app/schemas/: goal.py
backend/tests/: conftest.py  test_goals_api.py  test_reschedule_api.py  test_schedule_node.py  test_todos_api.py
docs/: tech_stack.md
docs/stitch/calendar/: index.html
docs/stitch/dashboard/: index.html
docs/superpowers/plans/: 2026-04-26-backend-setup.md  2026-04-27-calendar-view.md  2026-04-27-frontend-api-integration.md  2026-04-30-reschedule.md
docs/superpowers/specs/: 2026-04-25-hierar-do-design.md  2026-04-27-calendar-view-design.md  2026-04-27-frontend-api-integration.md  2026-04-30-reschedule-design.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/components/: GoalModal.tsx  MonthCalendar.tsx  RescheduleModal.tsx  WeekDetail.tsx
frontend/src/lib/: api.ts  queries.ts  types.ts  utils.ts
frontend/src/providers/: QueryProvider.tsx
