[tool.poetry]
name = "hierar-do-backend"
version = "0.1.0"
description = "Hierar-Do Backend API"
authors = ["EunHye-03"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
langgraph = "^0.2.0"
anthropic = "^0.40.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
greenlet = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
